Add h3, p, and link to my profilr

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Matt McDonald</h1>
 <p>I am from Philly, and attending the Iron Yard in Durham!</p>
+<h3>Programing Languages</h3>
+<p>HTML, CSS, Javascript, Java, Ruby</p>
+<a href="https://github.com/Matthew-McDonald" target="_blank">My Github Profile</a>
